[KNOWAGE-5665] - Refactoring and switching to Java bean